# Raytracer

./: .gitignore  CMakeLists.txt  README.md  Raytracer.drawio  main.cpp
src/: HelperFunctions.hpp  camera.cpp  camera.hpp  color.hpp  light.cpp  main.cpp  material.cpp  pixel.hpp  polygon.hpp  ray.cpp  ray.hpp  rectangle.cpp  rectangle.hpp  sphere.cpp  triangle.cpp  triangle.hpp  vec3.hpp
src/headers/: HelperFunctions.hpp  camera.hpp  color.hpp  light.hpp  material.hpp  polygon.hpp  ray.hpp  rectangle.h  rectangle.hpp  sphere.h  sphere.hpp  triangle.h  triangle.hpp
src/triangle/: triangle.h
